# skyro

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: pipeline.yaml
examples/: stochastic-volatility.ipynb
skyro/: __init__.py  _mixin.py  _result.py  _typing.py  _utils.py  sklearn.py  sktime.py
tests/: test_forecaster.py  test_sklearn.py  test_sktime.py  test_utils.py
